fix(prototype2): login and cadastro spacing fixed

--- a/frontend/prototipo-html/login-area/login.css
+++ b/frontend/prototipo-html/login-area/login.css
@@ -7,6 +7,7 @@
     padding-right: 2px;
     margin-top: 20px ;
     width: 40%;
+    min-width: 50%;
 }
 .cefit-text{
     color: white;
@@ -15,7 +16,7 @@
 }
 .login-container{
     box-shadow: 3px 3px 3px 3px rgb(44, 44, 44);
-    margin-top: 20%;
+    margin-top: 100px;
 }
 .cadastro-texto{
     margin-left: 15px;
