--- a/frontend/prototipo-html/sign-up-area/cadastro.css
+++ b/frontend/prototipo-html/sign-up-area/cadastro.css
@@ -5,7 +5,7 @@
     background-color: #3166D1;
     padding-left: 2px;
     padding-right: 2px;
-    margin-top: 20px ;
+    margin-top: 10px ;
     width: 40%;
 }
 .cefit-text{
@@ -15,7 +15,8 @@
 }
 .login-container{
     box-shadow: 3px 3px 3px 3px rgb(44, 44, 44);
-    margin-top: 100px;
+    margin-top: 50px;
+    min-width: 400px;
 }
 .cadastro-texto{
     margin-left: 15px;
